@@ -61,6 +61,7 @@
 #include "hbapiitm.h"
 
 BOOL hb_GetDefaultPrinter(LPTSTR pPrinterName, LPDWORD pdwBufferSize);
+BOOL hb_SetDefaultPrinter(LPTSTR pPrinterName);
 BOOL hb_GetPrinterNameByPort(LPTSTR pPrinterName, LPDWORD pdwBufferSize,LPTSTR pPortName, BOOL bSubStr);
 
 #define MAXBUFFERSIZE 255
@@ -194,7 +195,7 @@ BOOL hb_GetDefaultPrinter( LPTSTR pPrinterName, LPDWORD pdwBufferSize )
 
       DWORD dwNeeded, dwReturned ;
       PRINTER_INFO_2 *ppi2 ;
-      if ( EnumPrinters( PRINTER_ENUM_DEFAULT, NULL, 2, NULL, 0, &dwNeeded, &dwReturned) ) 
+      if ( EnumPrinters( PRINTER_ENUM_DEFAULT, NULL, 2, NULL, 0, &dwNeeded, &dwReturned) )
       {
          if ( dwNeeded > 0 )
          {
@@ -233,6 +234,216 @@ HB_FUNC( GETDEFAULTPRINTER )
       hb_retc("");
    }
 }
+
+// You are explicitly linking to SetDefaultPrinter because implicitly
+// linking on Windows 95/98 or NT4 results in a runtime error.
+// This block specifies which text version you explicitly link to.
+#ifdef UNICODE
+  #define SETDEFAULTPRINTER "SetDefaultPrinterW"
+#else
+  #define SETDEFAULTPRINTER "SetDefaultPrinterA"
+#endif
+
+/*-----------------------------------------------------------------*/
+/* hb_SetDefaultPrinter                                            */
+/*                                                                 */
+/* Parameters:                                                     */
+/*   pPrinterName: Valid name of existing printer to make default. */
+/*                                                                 */
+/* Returns: TRUE for success, FALSE for failure.                   */
+/*-----------------------------------------------------------------*/
+BOOL hb_SetDefaultPrinter(LPTSTR pPrinterName)
+
+{
+  BOOL bFlag;
+  OSVERSIONINFO osv;
+  DWORD dwNeeded = 0;
+  HANDLE hPrinter = NULL;
+  PRINTER_INFO_2 *ppi2 = NULL;
+  LPTSTR pBuffer = NULL;
+
+  /* What version of Windows are you running? */
+  osv.dwOSVersionInfoSize = sizeof(OSVERSIONINFO);
+  GetVersionEx(&osv);
+
+  if (!pPrinterName)
+    return FALSE;
+
+  /* If Windows 95 or 98, use SetPrinter. */
+  if (osv.dwPlatformId == VER_PLATFORM_WIN32_WINDOWS)
+  {
+
+    /* Open this printer so you can get information about it. */
+    bFlag = OpenPrinter(pPrinterName, &hPrinter, NULL);
+    if (!bFlag || !hPrinter)
+      return FALSE;
+
+    /* The first GetPrinter() tells you how big our buffer must
+       be to hold ALL of PRINTER_INFO_2. Note that this will
+       typically return FALSE. This only means that the buffer (the 3rd
+       parameter) was not filled in. You do not want it filled in here. */
+    SetLastError(0);
+    bFlag = GetPrinter(hPrinter, 2, 0, 0, &dwNeeded);
+    if (!bFlag)
+    {
+      if ((GetLastError() != ERROR_INSUFFICIENT_BUFFER) || (dwNeeded == 0))
+      {
+        ClosePrinter(hPrinter);
+        return FALSE;
+      }
+    }
+
+    /* Allocate enough space for PRINTER_INFO_2. */
+    ppi2 = (PRINTER_INFO_2 *)GlobalAlloc(GPTR, dwNeeded);
+    if (!ppi2)
+    {
+      ClosePrinter(hPrinter);
+      return FALSE;
+    }
+
+    /* The second GetPrinter() will fill in all the current information
+       so that all you have to do is modify what you are interested in. */
+    bFlag = GetPrinter(hPrinter, 2, (LPBYTE)ppi2, dwNeeded, &dwNeeded);
+    if (!bFlag)
+    {
+      ClosePrinter(hPrinter);
+      GlobalFree(ppi2);
+      return FALSE;
+    }
+
+    // Set default printer attribute for this printer.
+    ppi2->Attributes |= PRINTER_ATTRIBUTE_DEFAULT;
+    bFlag = SetPrinter(hPrinter, 2, (LPBYTE)ppi2, 0);
+    if (!bFlag)
+    {
+      ClosePrinter(hPrinter);
+      GlobalFree(ppi2);
+      return FALSE;
+    }
+
+    /* Tell all open programs that this change occurred.
+       Allow each program 1 second to handle this message. */
+    SendMessageTimeout(HWND_BROADCAST, WM_SETTINGCHANGE, 0L, (LPARAM)(LPCTSTR)"windows", SMTO_NORMAL, 1000, NULL);
+  }
+
+  /* If Windows NT, use the SetDefaultPrinter API for Windows 2000,
+     or WriteProfileString for version 4.0 and earlier. */
+  else if (osv.dwPlatformId == VER_PLATFORM_WIN32_NT)
+  {
+    if (osv.dwMajorVersion >= 5) /* Windows 2000 or later (use explicit call) */
+    {
+      HMODULE hWinSpool;
+      typedef BOOL (WINAPI *DEFPRINTER)( LPTSTR ) ; /* stops warnings */
+      DEFPRINTER fnSetDefaultPrinter;
+
+      hWinSpool = LoadLibrary("winspool.drv");
+      if (!hWinSpool)
+        return FALSE;
+      fnSetDefaultPrinter = GetProcAddress(hWinSpool, SETDEFAULTPRINTER );
+      if (!fnSetDefaultPrinter)
+      {
+        FreeLibrary(hWinSpool);
+        return FALSE;
+      }
+
+      bFlag = ( * fnSetDefaultPrinter)( pPrinterName );
+      FreeLibrary(hWinSpool);
+      if (!bFlag)
+        return FALSE;
+    }
+
+    else /* NT4.0 or earlier */
+    {
+      /* Open this printer so you can get information about it. */
+      bFlag = OpenPrinter(pPrinterName, &hPrinter, NULL);
+      if (!bFlag || !hPrinter)
+        return FALSE;
+
+      /* The first GetPrinter() tells you how big our buffer must
+         be to hold ALL of PRINTER_INFO_2. Note that this will
+         typically return FALSE. This only means that the buffer (the 3rd
+         parameter) was not filled in. You do not want it filled in here. */
+      SetLastError(0);
+      bFlag = GetPrinter(hPrinter, 2, 0, 0, &dwNeeded);
+      if (!bFlag)
+      {
+        if ((GetLastError() != ERROR_INSUFFICIENT_BUFFER) || (dwNeeded == 0))
+        {
+          ClosePrinter(hPrinter);
+          return FALSE;
+        }
+      }
+
+      /* Allocate enough space for PRINTER_INFO_2. */
+      ppi2 = (PRINTER_INFO_2 *)GlobalAlloc(GPTR, dwNeeded);
+      if (!ppi2)
+      {
+        ClosePrinter(hPrinter);
+        return FALSE;
+      }
+
+      /* The second GetPrinter() fills in all the current
+         information. */
+      bFlag = GetPrinter(hPrinter, 2, (LPBYTE)ppi2, dwNeeded, &dwNeeded);
+      if ((!bFlag) || (!ppi2->pDriverName) || (!ppi2->pPortName))
+      {
+        ClosePrinter(hPrinter);
+        GlobalFree(ppi2);
+        return FALSE;
+      }
+
+      /* Allocate buffer big enough for concatenated string.
+         String will be in form "printername,drivername,portname". */
+      pBuffer = (LPTSTR)GlobalAlloc(GPTR,
+        lstrlen(pPrinterName) +
+        lstrlen(ppi2->pDriverName) +
+        lstrlen(ppi2->pPortName) + 3);
+      if (!pBuffer)
+      {
+        ClosePrinter(hPrinter);
+        GlobalFree(ppi2);
+        return FALSE;
+      }
+
+      /* Build string in form "printername,drivername,portname". */
+      lstrcpy(pBuffer, pPrinterName);  lstrcat(pBuffer, ",");
+      lstrcat(pBuffer, ppi2->pDriverName);  lstrcat(pBuffer, ",");
+      lstrcat(pBuffer, ppi2->pPortName);
+
+      /* Set the default printer in Win.ini and registry. */
+      bFlag = WriteProfileString("windows", "device", pBuffer);
+      if (!bFlag)
+      {
+        ClosePrinter(hPrinter);
+        GlobalFree(ppi2);
+        GlobalFree(pBuffer);
+        return FALSE;
+      }
+    }
+
+    /* Tell all open programs that this change occurred.
+       Allow each app 1 second to handle this message. */
+    SendMessageTimeout(HWND_BROADCAST, WM_SETTINGCHANGE, 0L, 0L, SMTO_NORMAL, 1000, NULL);
+
+  }
+
+  // Clean up.
+  if (hPrinter)
+    ClosePrinter(hPrinter);
+  if (ppi2)
+    GlobalFree(ppi2);
+  if (pBuffer)
+    GlobalFree(pBuffer);
+
+  return TRUE;
+}
+#undef SETDEFAULTPRINTER
+
+HB_FUNC( SETDEFAULTPRINTER )
+{
+   hb_retl( hb_SetDefaultPrinter( hb_parc( 1 ) ) );
+}
+
 
 BOOL hb_GetPrinterNameByPort( LPTSTR pPrinterName, LPDWORD pdwBufferSize, LPTSTR pPortName, BOOL bSubStr )
 {
